<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="shyne.mediapp.library.ActivityMain">

	<item
		android:id="@+id/action_library_new_item"
		android:icon="@android:drawable/ic_menu_add"
		android:orderInCategory="0"
		android:showAsAction="ifRoom|withText"
		android:title="@string/function_new"/>

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/action_library_illnesses"
			android:checked="true"
			android:showAsAction="never"
			android:title="@string/action_library_illnesses"/>
		<item
			android:id="@+id/action_library_symptoms"
			android:showAsAction="never"
			android:title="@string/action_library_symptoms"/>
		<item
			android:id="@+id/action_library_causes"
			android:showAsAction="never"
			android:title="@string/action_library_causes"/>
		<item
			android:id="@+id/action_library_medications"
			android:showAsAction="never"
			android:title="@string/action_library_medications"/>
	</group>

	<item
		android:id="@+id/action_library_export"
		android:orderInCategory="9"
		android:showAsAction="never"
		android:title="@string/action_library_export"/>
	<item
		android:id="@+id/action_library_import"
		android:orderInCategory="10"
		android:showAsAction="never"
		android:title="@string/action_library_import"/>

</menu>
