<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="shyne.mediapp.MainActivity">

	<item
		android:id="@+id/action_patients_records"
		android:orderInCategory="0"
		android:showAsAction="never"
		android:title="@string/action_patients_records"/>

	<item
		android:id="@+id/action_patients"
		android:orderInCategory="0"
		android:showAsAction="never"
		android:title="@string/action_patients"/>

	<item
		android:id="@+id/action_library"
		android:orderInCategory="1"
		android:showAsAction="never"
		android:title="@string/action_library"/>

	<item
		android:id="@+id/action_about"
		android:orderInCategory="10"
		android:showAsAction="never"
		android:title="@string/action_about"/>

</menu>
