<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/Background.Title"
              android:orientation="vertical"
              android:padding="@dimen/dimen_16">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageButton
			android:id="@+id/imagebutton_change__fragment_current_patient"
			style="@style/AppTheme.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/function_delete"
			android:src="@android:drawable/ic_menu_manage"/>

		<TextView
			android:id="@+id/textview_current__fragment_current_patient"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_toLeftOf="@id/imagebutton_change__fragment_current_patient"
			android:layout_toStartOf="@id/imagebutton_change__fragment_current_patient"
			android:text="@string/msg_current_patient"
			android:textAppearance="@style/AppTheme.TextAppearance.Title"/>


	</RelativeLayout>

	<TextView
		android:id="@+id/textview_code__fragment_current_patient"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/dimen_4"
		android:text="@string/patient_code"
		android:textAppearance="@style/AppTheme.TextAppearance.Label"/>

	<TextView
		android:id="@+id/textview_name__fragment_current_patient"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/dimen_4"
		android:text="@string/patient_name"
		android:textAppearance="@style/AppTheme.TextAppearance.Label"/>

	<TextView
		android:id="@+id/textview_age__fragment_current_patient"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/dimen_4"
		android:text="@string/patient_age"
		android:textAppearance="@style/AppTheme.TextAppearance.Label"/>

	<TextView
		android:id="@+id/textview_gender__fragment_current_patient"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/dimen_4"
		android:text="@string/patient_gender"
		android:textAppearance="@style/AppTheme.TextAppearance.Label"/>

</LinearLayout>
