<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/Background"
		android:divider="@android:drawable/divider_horizontal_textfield"
		android:orientation="vertical"
		android:showDividers="middle">

		<TextView
			android:id="@+id/textview_name__info_library_illness"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/Background.Title"
			android:gravity="center"
			android:padding="@dimen/dimen_8"
			android:text="@string/illness_name"
			android:textAppearance="@style/AppTheme.TextAppearance.Title"/>

		<TextView
			android:id="@+id/textview_description__info_library_illness"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/dimen_8"
			android:text="@string/illness_description"
			android:textAppearance="@style/AppTheme.TextAppearance.Description"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/Background.Title"
				android:padding="@dimen/dimen_8"
				android:text="@string/illness_symptoms"
				android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

			<LinearLayout
				android:id="@+id/linearlayout_symptoms__info_library_illness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="@dimen/dimen_8"
				android:paddingLeft="@dimen/dimen_8"
				android:paddingRight="@dimen/dimen_8"
				android:paddingStart="@dimen/dimen_8"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/Background.Title"
				android:padding="@dimen/dimen_8"
				android:text="@string/illness_causes"
				android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

			<LinearLayout
				android:id="@+id/linearlayout_causes__info_library_illness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="@dimen/dimen_8"
				android:paddingLeft="@dimen/dimen_8"
				android:paddingRight="@dimen/dimen_8"
				android:paddingStart="@dimen/dimen_8"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/Background.Title"
				android:padding="@dimen/dimen_8"
				android:text="@string/illness_medications"
				android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

			<LinearLayout
				android:id="@+id/linearlayout_medications__info_library_illness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="@dimen/dimen_8"
				android:paddingLeft="@dimen/dimen_8"
				android:paddingRight="@dimen/dimen_8"
				android:paddingStart="@dimen/dimen_8"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/Background.Title"
				android:padding="@dimen/dimen_8"
				android:text="@string/illness_remedies"
				android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

			<TextView
				android:id="@+id/textview_remedies__info_library_illness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/dimen_8"
				android:paddingEnd="@dimen/dimen_16"
				android:paddingLeft="@dimen/dimen_16"
				android:paddingRight="@dimen/dimen_16"
				android:paddingStart="@dimen/dimen_16"
				android:paddingTop="@dimen/dimen_8"
				android:text="@string/illness_remedies"
				android:textAppearance="@style/AppTheme.TextAppearance.Description"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/Background.Title"
				android:padding="@dimen/dimen_8"
				android:text="@string/illness_notes"
				android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

			<TextView
				android:id="@+id/textview_notes__info_library_illness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/dimen_8"
				android:paddingEnd="@dimen/dimen_16"
				android:paddingLeft="@dimen/dimen_16"
				android:paddingRight="@dimen/dimen_16"
				android:paddingStart="@dimen/dimen_16"
				android:paddingTop="@dimen/dimen_8"
				android:text="@string/illness_notes"
				android:textAppearance="@style/AppTheme.TextAppearance.Description"/>
		</LinearLayout>
	</LinearLayout>

</ScrollView>
