<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="@dimen/dimen_4"
                android:paddingLeft="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:paddingTop="0dp">

	<TextView
		android:id="@+id/textview_patient__listitem_records"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:lines="1"
		android:text="@string/patient_name"
		android:textAppearance="@style/AppTheme.TextAppearance.Label"/>
	
	<TextView
		android:id="@+id/textview_illness__listitem_records"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:lines="1"
		android:text="@string/illness_name"
		android:textAppearance="@style/AppTheme.TextAppearance.Description"/>

	<TextView
		android:id="@+id/textview_datetime__listitem_records"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textview_patient__listitem_records"
		android:layout_marginLeft="@dimen/dimen_16"
		android:layout_marginStart="@dimen/dimen_16"
		android:lines="1"
		android:text="@string/diagnosis_datetime"
		android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

	<TextView
		android:id="@+id/hidden_id__listitem_records"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"/>

</RelativeLayout>
